<resources>
    <string name="app_name">Radio Dewi Anjani</string>
    <string name="channel_url">http://ina.vinhostmedia.com:8000/user300</string>

    <string name="home">Home</string>
    <string name="jadwal_acara">Jadwal acara</string>
    <string name="profil">Profil</string>

    <string name="freq">FM 104.6MHz</string>
    <string name="tagline">Media shilaturrahmi\n Menggugah inspirasi ikhwan sejati</string>

    <string name="home_title">Online Streaming</string>
    <string name="version_text">version 0.0.1-beta</string>
    <string name="streaming_status_on">Streaming is ON</string>
    <string name="streaming_status_off">Streaming is OFF</string>
    <string name="streaming_hint_off">Klik gambar untuk memulai streaming</string>
    <string name="streaming_hint_on">Klik gambar untuk menghentikan streaming</string>
    <string name="streaming_hint_offline">Koneksi dengan server bermasalah...</string>
    <string name="loading">Menghubungi server...</string>

    <string name="exit_message">Yakin ingin menutup aplikasi ?</string>
    <string name="exit_or_hide_message">Untuk keluar namun tetap melanjutkan streaming, tekan HIDE. Jika tidak, tekan EXIT</string>
    <string name="exit_button">EXIT</string>
    <string name="hide_button">HIDE</string>
    <string name="cancel_button">CANCEL</string>

    <string name="profil_header">Radio Dewi Anjani</string>
    <string name="profil_content">
        Radio Dewi Anjani merupakan radio pelopor pertama di NTB sebagai radio dakwah Nahdlatul Wathan.
        Lahir sejak tahun 2002 yang didirikan oleh Pengurus Besar Nahdlatul Wathan Ummuna Hj.Sitti Raihanun Zainuddin Abdul Madjid
        sekaligus sebagai Pendiri Yayasan Pondok Pesantren Syaikh zainuddin Nahdlatul Wathan Anjani Lombok Timur.\n\n
        Keberadaan radio ini sudah cukup melekat ditelinga pendengar di Nusa Tenggara Barat karena sajian acaranya menyentuh kepentingan semua kalangan dengan sesi acara yang beragam.\n\n
        Dengan slogan baru yaitu Media shilaturrahmi menggugah inspirasi ikhwan sejati, kami berharap kedepan radio ini dapat lebih bermanfat bagi semua kalangan baik manfaat secara duniawi maupun ukhrowi. segala saran dan keritik yang membangun sangat kami harapkan agar radio ini dapat mewujudkan dengan maksimal sesuai slogan tersebut kepada pendengar khususnya keluarga besar Nahdlatul Wathan dan muslimin muslimat dimana saja berada.\n\n
        Untuk mengirim saran dan kritik silahkan kirim ke email: admin@dewianjanimedia.com atau kunjungi website: www.dewianjanimedia.com\n\n
    </string>

    <string name="action_settings">Settings</string>
    <string name="developer">Developed By Syamsul Muttaqin</string>

</resources>
