<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.dewianjanimedia.rda.fragment.HomeFragment"
    android:background="@color/window_background"
    android:clickable="false"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:id="@+id/homeTitle"
            android:layout_gravity="top|center"
            android:textSize="15pt"
            android:layout_marginTop="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/base_color"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/version_text"
            android:id="@+id/versionText"
            android:textSize="5pt"
            android:textColor="@color/version_color"
            android:layout_below="@+id/homeTitle"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/streamingButton"
            android:layout_gravity="center"
            android:src="@drawable/player_stop"
            android:background="#00ffffff"
            android:layout_below="@+id/homeTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/streaming_status_off"
            android:id="@+id/streamingStatus"
            android:layout_gravity="center"
            android:layout_below="@+id/streamingButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="13dp"
            android:textColor="@color/alert_color"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:id="@+id/streamingHint"
            android:layout_gravity="center_horizontal|bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_horizontal"
            android:textSize="11dp"
            android:layout_below="@+id/streamingStatus"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:id="@+id/developer"
        android:textSize="3pt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="bottom|center_horizontal" />

</LinearLayout>
