<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dewianjanimedia.rda.activity.Welcome"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/antenna_tower"
        android:layout_above="@+id/freq"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="100"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <TextView android:text="@string/freq" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/freq"
            android:layout_above="@+id/name"
            android:layout_alignLeft="@+id/name"
            android:layout_alignStart="@+id/name"
            android:textStyle="bold"
            android:textColor="@color/version_color"
            android:gravity="right"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/name"
            android:textStyle="bold"
            android:textSize="13pt"
            android:layout_above="@+id/tagline"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_primary"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:id="@+id/tagline"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/name"
        android:layout_alignEnd="@+id/name"
        android:layout_marginTop="30dp"
        android:textColor="@color/base_color"
        android:gravity="center_horizontal" />

</LinearLayout>
